@startuml

title __SRC's Class Diagram__\n

  package  {
    class Dao {
        {static} - DRIVER_NAME : String
        {static} - URL : String
        {static} - USER_NAME : String
        {static} - PASSWORD : String
        + Dao()
        + login_authenticate()
        + register_user()
        {static} + main()
    }
  }
  

  package  {
    class RMIClient {
        {static} - stub : ServerAction
        + RMIClient()
        {static} + main()
        {static} - register()
    }
  }
  

  package  {
    class RMIServer {
        + RMIServer()
        {static} + main()
    }
  }
  

  package  {
    interface ServerAction {
        {abstract} + login()
        {abstract} + register()
    }
  }
  

  package  {
    class ServerImpl {
        + ServerImpl()
        + login()
        + register()
    }
  }
  

  ServerImpl -up-|> ServerAction
  ServerImpl -up-|> UnicastRemoteObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
